Modified Home Page

--- a/index.html
+++ b/index.html
@@ -14,20 +14,16 @@
 
 <body>
     <!-- nav bar starts -->
-    <nav class="top-nav">
-        <div class="contents-top">
-            <div class="nav-bar-contents">
-                <h1 class="nav-bar-h1">Uni-Sko</h1>
+    <nav>
+        <h1>Uni-Sko</h1>
+        <div class="nav-bar-contents-info">
+            <div class="register-sell">
+                <i class="fa-solid fa-user"></i>
+                <p>Register/Login</p>
             </div>
-            <div class="nav-bar-contents-info">
-                <div class="register-login">
-                    <i class="fa-solid fa-user"></i>
-                    <p>Register/Login</p>
-                </div>
-                <div class="sell">
-                    <i class="fa-solid fa-circle-plus"></i>
-                    <p>Sell</p>
-                </div>
+            <div class="register-sell">
+                <i class="fa-solid fa-circle-plus"></i>
+                <p>Sell</p>
             </div>
         </div>
     </nav>
@@ -36,16 +32,15 @@
     <div class="banner">
         <div class="banner-top">
             <div class="banner-contents">
-                <p class="buy-sell">Buy & Sell anything in your <br>University Campus</p>
-                <p class="banner-button">
+                <p>Buy & Sell anything in your <br>University Campus</p>
+                <div class="banner-button">
                     <img class="Search-More" src="./images/Search-More.svg" alt="">
                     <input type="text" placeholder="Search for your product">
                     <img class="sliders" src="./images/sliders.svg" alt="">
-                </p>
+                </div>
             </div>
-            <div class="banner-image">
-                <img class="imgs" src="./images/banner-image.svg" alt="Banner Image">
-            </div>
+            <img src="./images/banner-image.svg" alt="Banner Image">
+
         </div>
     </div>
 
@@ -85,11 +80,8 @@
                 <p class="product-btm-p">University of Dar es salaam</p>
                 <p class="product-date">20-03-2023</p>
             </div>
-
         </div>
-    </div>
 
-    <div class="product">
         <div class="product-card">
             <div class="product-image">
                 <img src="https://source.unsplash.com/300x250/?table," />
@@ -103,10 +95,7 @@
                 <p class="product-btm-p">University of Dar es salaam</p>
                 <p class="product-date">20-03-2023</p>
             </div>
-
         </div>
-    </div>
-    <div class="product">
         <div class="product-card">
             <div class="product-image">
                 <img src="https://source.unsplash.com/300x250/?table," />
@@ -120,10 +109,7 @@
                 <p class="product-btm-p">University of Dar es salaam</p>
                 <p class="product-date">20-03-2023</p>
             </div>
-
         </div>
-    </div>
-    <div class="product">
         <div class="product-card">
             <div class="product-image">
                 <img src="https://source.unsplash.com/300x250/?table," />
@@ -137,10 +123,7 @@
                 <p class="product-btm-p">University of Dar es salaam</p>
                 <p class="product-date">20-03-2023</p>
             </div>
-
         </div>
-    </div>
-    <div class="product">
         <div class="product-card">
             <div class="product-image">
                 <img src="https://source.unsplash.com/300x250/?table," />
@@ -154,10 +137,7 @@
                 <p class="product-btm-p">University of Dar es salaam</p>
                 <p class="product-date">20-03-2023</p>
             </div>
-
         </div>
-    </div>
-    <div class="product">
         <div class="product-card">
             <div class="product-image">
                 <img src="https://source.unsplash.com/300x250/?table," />
@@ -171,10 +151,7 @@
                 <p class="product-btm-p">University of Dar es salaam</p>
                 <p class="product-date">20-03-2023</p>
             </div>
-
         </div>
-    </div>
-    <div class="product">
         <div class="product-card">
             <div class="product-image">
                 <img src="https://source.unsplash.com/300x250/?table," />
@@ -188,10 +165,7 @@
                 <p class="product-btm-p">University of Dar es salaam</p>
                 <p class="product-date">20-03-2023</p>
             </div>
-
         </div>
-    </div>
-    <div class="product">
         <div class="product-card">
             <div class="product-image">
                 <img src="https://source.unsplash.com/300x250/?table," />
@@ -205,77 +179,11 @@
                 <p class="product-btm-p">University of Dar es salaam</p>
                 <p class="product-date">20-03-2023</p>
             </div>
-
         </div>
-    </div>
-    <div class="product">
-        <div class="product-card">
-            <div class="product-image">
-                <img src="https://source.unsplash.com/300x250/?table," />
-            </div>
-            <h4 class="product-h4">Meza</h4>
-            <div class="product-details">
-                <p class="product-p">TZS 100000</p>
-                <button class="product-btn">USED</button>
-            </div>
-            <div class="product-bottom">
-                <p class="product-btm-p">University of Dar es salaam</p>
-                <p class="product-date">20-03-2023</p>
-            </div>
 
-        </div>
     </div>
-    <div class="product">
-        <div class="product-card">
-            <div class="product-image">
-                <img src="https://source.unsplash.com/300x250/?table," />
-            </div>
-            <h4 class="product-h4">Meza</h4>
-            <div class="product-details">
-                <p class="product-p">TZS 100000</p>
-                <button class="product-btn">USED</button>
-            </div>
-            <div class="product-bottom">
-                <p class="product-btm-p">University of Dar es salaam</p>
-                <p class="product-date">20-03-2023</p>
-            </div>
 
-        </div>
-    </div>
-    <div class="product">
-        <div class="product-card">
-            <div class="product-image">
-                <img src="https://source.unsplash.com/300x250/?table," />
-            </div>
-            <h4 class="product-h4">Meza</h4>
-            <div class="product-details">
-                <p class="product-p">TZS 100000</p>
-                <button class="product-btn">USED</button>
-            </div>
-            <div class="product-bottom">
-                <p class="product-btm-p">University of Dar es salaam</p>
-                <p class="product-date">20-03-2023</p>
-            </div>
 
-        </div>
-    </div>
-    <div class="product">
-        <div class="product-card">
-            <div class="product-image">
-                <img src="https://source.unsplash.com/300x250/?table," />
-            </div>
-            <h4 class="product-h4">Meza</h4>
-            <div class="product-details">
-                <p class="product-p">TZS 100000</p>
-                <button class="product-btn">USED</button>
-            </div>
-            <div class="product-bottom">
-                <p class="product-btm-p">University of Dar es salaam</p>
-                <p class="product-date">20-03-2023</p>
-            </div>
-
-        </div>
-    </div>
     <div class="bottom">
         <hr>
         <button class="btn">View More</button>
@@ -298,7 +206,7 @@
                 <h3>Contact Us</h3>
                 <div class="details">
                     <img src="./images/Vector.svg" alt="">
-                    <p>+91-99999 99999</p>
+                    <p>+91-9999999999</p>
                 </div>
                 <div class="details">
                     <img src="./images/mail.svg" alt="">
