Register Login Updated

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="nav-bar-contents-info">
             <div class="register-sell">
                 <i class="fa-solid fa-user"></i>
-                <p>Register/Login</p>
+                <p><a href="./Register/register.html">Register/Login</a></p>
             </div>
             <div class="register-sell">
                 <i class="fa-solid fa-circle-plus"></i>
