--- a/Login/login.html
+++ b/Login/login.html
@@ -19,7 +19,7 @@
         <div class="nav-bar-contents-info">
             <div class="register-sell">
                 <i class="fa-solid fa-user"></i>
-                <p><a href="/Register/register.html">Register/Login</a></p>
+                <p><a href="../Register/register.html">Register/Login</a></p>
             </div>
             <div class="register-sell">
                 <i class="fa-solid fa-circle-plus"></i>
@@ -29,10 +29,10 @@
     </nav>
     <!-- nav bar ends -->
     <div class="register-login">
-        <img src="/images/rafiki.svg" alt="register-login">
+        <img src="../images/rafiki.svg" alt="register-login">
         <div class="register-login-info">
             <div class="buttons">
-                <button class="sign-up"> <a href="/Register/register.html">SIGN UP</a></button>
+                <button class="sign-up"> <a href="../Register/register.html">SIGN UP</a></button>
                 <button class="sign-in"><a href="./login.html">SIGN IN</a></button>
 
             </div>
@@ -55,7 +55,7 @@
                     <i class="fa-brands fa-google"></i>
                     Sign up with Google</button>
                 <p class="p1">Already have an account?
-                    <a href="/Login/login.html">
+                    <a href="../Login/login.html">
                         <span> Sign in</span>
                     </a>
                 </p>
@@ -79,15 +79,15 @@
             <div class="contents1">
                 <h3>Contact Us</h3>
                 <div class="details">
-                    <img src="/images/Vector.svg" alt="">
+                    <img src="../images/Vector.svg" alt="">
                     <p>+91-9999999999</p>
                 </div>
                 <div class="details">
-                    <img src="/images/mail.svg" alt="">
+                    <img src="../images/mail.svg" alt="">
                     <p>abc@gmail.com</p>
                 </div>
                 <div class="details">
-                    <img src="/images/location.svg" alt="">
+                    <img src="../images/location.svg" alt="">
                     <p>Hyderabad</p>
                 </div>
             </div>
