--- a/Register/register.html
+++ b/Register/register.html
@@ -29,11 +29,11 @@
     </nav>
     <!-- nav bar ends -->
     <div class="register-login">
-        <img src="/images/rafiki.svg" alt="register-login">
+        <img src="../images/rafiki.svg" alt="register-login">
         <div class="register-login-info">
             <div class="buttons">
                 <button class="sign-up"> <a href="./register.html">SIGN UP</a></button>
-                <button class="sign-in"><a href="/Login/login.html">SIGN IN</a></button>
+                <button class="sign-in"><a href="../Login/login.html">SIGN IN</a></button>
 
             </div>
             <form action="">
@@ -59,7 +59,7 @@
                     <i class="fa-brands fa-google"></i>
                     Sign up with Google</button>
                 <p class="p1">Already have an account?
-                    <a href="/Login/login.html">
+                    <a href="../Login/login.html">
                         <span> Sign in</span>
                     </a>
                 </p>
@@ -83,15 +83,15 @@
             <div class="contents1">
                 <h3>Contact Us</h3>
                 <div class="details">
-                    <img src="/images/Vector.svg" alt="">
+                    <img src="../images/Vector.svg" alt="">
                     <p>+91-9999999999</p>
                 </div>
                 <div class="details">
-                    <img src="/images/mail.svg" alt="">
+                    <img src="../images/mail.svg" alt="">
                     <p>abc@gmail.com</p>
                 </div>
                 <div class="details">
-                    <img src="/images/location.svg" alt="">
+                    <img src="../images/location.svg" alt="">
                     <p>Hyderabad</p>
                 </div>
             </div>
